--- a/Identity.API/Views/Home/Index.cshtml
+++ b/Identity.API/Views/Home/Index.cshtml
@@ -45,4 +45,11 @@
             </p>
         </div>
     </div>
+    
+    <div>
+        <form asp-controller="Account" asp-action="Send">
+            <button class="btn btn-primary">send</button>
+        </form>
+    </div>
+    
 </div>
