--- a/Identity.API/wwwroot/css/site.css
+++ b/Identity.API/wwwroot/css/site.css
@@ -9,7 +9,15 @@ a.navbar-brand {
 
 /* Provide sufficient contrast against white background */
 a {
-  color: #0366d6;
+  color: #009688!important;
+  -webkit-transition: color 0.1s ease-in;
+  -moz-transition: color 0.1s ease-in;
+  -o-transition: color 0.1s ease-in;
+  transition: color 0.1s ease-in;
+}
+
+a:hover{
+  color: #009688!important;
 }
 
 .btn-primary {
