--- a/Identity.API/Views/Account/ForgotPassword.cshtml
+++ b/Identity.API/Views/Account/ForgotPassword.cshtml
@@ -1,18 +1,32 @@
 ﻿@model Identity.API.Models.ManageViewModels.ForgotPasswordViewModel
-<link rel="stylesheet" href="~/css/login-register.css"/>
+<link rel="stylesheet" href="~/css/login.css"/>
 
 <div class="new-container mx-auto">
-    <p class="text-center">
-        Enter email which you use for log in, we'll send link to change password.
-    </p>
-    <form asp-action="ForgotPassword">
-        <div class="form-group row">
-            <label asp-for="Email" class="col-sm-2 col-form-label">Email</label>
-            <div class="col-sm-10">
-                <input asp-for="Email" type="email" class="form-control" placeholder="example@@kickstarter.com">
+    <div class="form-new-container sign-in-new-container form">
+        <form asp-action="ForgotPassword" class="py-5">
+            @Html.AntiForgeryToken()
+            <input type="hidden" asp-for="ReturnUrl" />
+            
+            <h1 class="title pb-4">Password recovery</h1>
+            <div class="mt-4">
+                <p class="text-center">
+                    Enter email which you use for log in, we'll send link to change password.
+                </p>
+
+                <div class="form-group row">
+                    <div class="input-group">
+                        <div class="input-group-prepend label">
+                            <span class="input-group-text">Email:</span>
+                        </div>
+                        <input asp-for="Email" type="email" class="form-control">
+                    </div>
+                    <span asp-validation-for="Email" class="text-danger ml-3"></span>
+                </div>
             </div>
-            <span asp-validation-for="Email" class="text-danger"></span>
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <button name="button" value="login" class="mb-3">Submit</button>
+        </form>
+        <div class="message text-center">
+            <p>Back to <a asp-action="Login" class="link">Sign in</a></p>
         </div>
-    </form>
+    </div>
 </div>
