--- a/Identity.API/Views/Account/LoginRegister.cshtml
+++ b/Identity.API/Views/Account/LoginRegister.cshtml
@@ -1,6 +1,5 @@
 ﻿@model Identity.API.Models.ManageViewModels.LoginRegisterViewModel
 <link rel="stylesheet" href="~/css/login-register.css"/>
-<partial name="_ValidationSummary" />
 
 <div class="new-container mx-auto @(Model.IsRegisterRequest ? "right-panel-active" : "")" id="container">
 	<div class="form-new-container sign-up-new-container">
@@ -9,36 +8,16 @@
 			<input type="hidden" asp-for="ReturnUrl"/>
 
 			<h1 class="title">Create Account</h1>
-			<div class="social-new-container">
-				@foreach (var provider in Model.VisibleExternalProviders)
-				{
-					<a class="social"
-					   asp-controller="External"
-					   asp-action="Challenge"
-					   asp-route-provider="@provider.AuthenticationScheme"
-					   asp-route-returnUrl="@Model.ReturnUrl">
-						@switch (provider.DisplayName)
-						{
-							case "Facebook":
-								<i class="fab fa-facebook-f social"></i>
-								break;
-							case "Google":
-								<i class="fab fa-google social"></i>
-								break;
-							case "Yandex":
-								<i class="fab fa-yandex-international social"></i>
-								break;
-							case "Vkontakte":
-								<i class="fab fa-vk social"></i>
-								break;
-						}
-					</a>
-				}
-			</div>
+			<partial name="SocialSignIn" model="Model"/>
 			<span>or use your email for registration</span>
+			
 			<input asp-for="Name" type="text" class="form-control" placeholder="Name"/>
+			<span asp-validation-for="Name"  class="text-right text-danger"></span>
 			<input asp-for="UserName" type="email" class="form-control" placeholder="Username" autofocus>
+			<span asp-validation-for="UserName" class="text-right text-danger"></span>
 			<input asp-for="Password" type="password" class="form-control" placeholder="Password" autocomplete="off">
+			<span asp-validation-for="Password" class="text-right text-danger"></span>
+			
 			<button>Sign Up</button>
 		</form>
 	</div>
@@ -48,33 +27,16 @@
 			<input type="hidden" asp-for="ReturnUrl" />
 			
 			<h1 class="title">Sign in</h1>
-			<div class="social-new-container">
-				@foreach (var provider in Model.VisibleExternalProviders)
-				{
-					<a class="social"
-					   asp-controller="External"
-                       asp-action="Challenge"
-                       asp-route-provider="@provider.AuthenticationScheme"
-					   asp-route-returnUrl="@Model.ReturnUrl">
-						@switch (provider.DisplayName)
-                        	{
-								case "Facebook": <i class="fab fa-facebook-f social"></i>
-                        			break;
-                        		case "Google": <i class="fab fa-google social"></i>
-                        			break;
-                        		case "Yandex": <i class="fab fa-yandex-international social"></i>
-                        			break;
-                        		case "Vkontakte": <i class="fab fa-vk social "></i>
-                        			break;
-                        	}
-					</a>
-				}
-			</div>
+			<partial name="SocialSignIn" model="Model"/>
 			<span>or use your account</span>
+			
 			<input type="email" class="form-control" placeholder="Username" asp-for="UserName" autofocus>
+			<span asp-validation-for="UserName" class="text-right text-danger"></span>
 			<input type="password" class="form-control" placeholder="Password" asp-for="Password" autocomplete="off">
-		
+			<span asp-validation-for="Password" class="text-right text-danger"></span>
+			
 			<a asp-action="ForgotPassword" class="forgot-link">Forgot your password?</a>
+			
 			<button name="button" value="login">Sign In</button>
 		</form>
 	</div>
