--- a/Identity.API/Views/Home/Index.cshtml
+++ b/Identity.API/Views/Home/Index.cshtml
@@ -1,13 +1,4 @@
-﻿@* @{ *@
-@*     ViewData["Title"] = "Home Page"; *@
-@* } *@
-@* *@
-@* <div class="text-center"> *@
-@*     <h1 class="display-4">Welcome</h1> *@
-@*     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p> *@
-@* </div> *@
-
-@{
+﻿@{
     var version = typeof(IdentityServer4.Hosting.IdentityServerMiddleware).Assembly.GetName().Version?.ToString();
 }
 
@@ -45,11 +36,10 @@
             </p>
         </div>
     </div>
-    
+
     <div>
-        <form asp-controller="Account" asp-action="Send">
-            <button class="btn btn-primary">send</button>
-        </form>
+        <a asp-controller="Account" asp-action="Login">Login</a>
     </div>
     
+
 </div>
