--- a/Identity.API/wwwroot/css/login.css
+++ b/Identity.API/wwwroot/css/login.css
@@ -1,6 +1,162 @@
-﻿.panel {
-    width: 30rem;
-    padding: 30px 50px;
+﻿
+@import url('https://fonts.googleapis.com/css?family=Montserrat:400,800');
+
+* {
+    box-sizing: border-box;
+}
+
+header {
+    visibility: hidden;
+}
+
+body {
+    background: #f6f5f7;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    font-family: 'Montserrat', sans-serif;
+    height: 90vh;
+    margin: -20px 0 50px;
+}
+
+.title {
+    font-weight: bold;
+    margin: 0;
+}
+
+.sub-title {
+    font-size: 14px;
+    font-weight: 100;
+    line-height: 20px;
+    letter-spacing: 0.5px;
+    margin: 20px 0 30px;
+}
+
+span {
+    font-size: 12px;
+}
+
+a {
+    color: #333!important;
+    text-decoration: none;
+    font-size: 14px;
+    margin: 15px 0;
+}
+
+.link{
+    text-decoration: underline!important;
+    color: #009688!important;
+    font-size: 16px!important;
+}
+
+a:hover, link:hover{
+    color: #05ce78 !important;
+    font-size: 14px;
+    text-decoration: none;
+    margin: 15px 0;
+}
+
+button {
+    border-radius: 20px;
+    border: 1px solid #009688;
+    background-color: #009688;
+    color: #FFFFFF;
+    font-size: 12px;
+    font-weight: bold;
+    padding: 12px 45px;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    transition: transform 80ms ease-in;
+}
+
+button:active {
+    transform: scale(0.95);
+}
+
+button:focus {
+    outline: none;
+}
+
+button.ghost {
+    background-color: transparent;
+    border-color: #FFFFFF;
+}
+
+form {
+    background-color: #FFFFFF;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    padding: 0 50px;
+    height: 100%;
+    text-align: center;
+}
+
+input {
+    background-color: #eee;
+    border: none;
+    padding: 12px 15px;
+    margin: 8px 0;
+    width: 100%;
+}
+
+.label{
+    padding: 8px 0 12px 15px;
+}
+
+.new-container {
+    background-color: #fff;
     border-radius: 10px;
-    border: #9E9E9E solid 2px;
+    box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+    position: relative;
+    overflow: hidden;
+    width: 384px;
+    max-width: 100%;
+    min-height: 500px;
+}
+
+.form-new-container {
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    transition: all 0.6s ease-in-out;
+}
+
+.social-new-container {
+    margin: 20px 0;
+}
+
+.social-new-container a {
+    border: 1px solid #DDDDDD;
+    border-radius: 50%;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0 5px;
+    height: 40px;
+    width: 40px;
+}
+
+.social{
+    -webkit-transition: box-shadow 0.2s ease-in, color 0.1s ease-in;
+    -moz-transition: box-shadow 0.2s ease-in, color 0.1s ease-in;
+    -o-transition: box-shadow 0.2s ease-in, color 0.1s ease-in;
+    transition: box-shadow 0.2s ease-in, color 0.1s ease-in;
+}
+
+.social:hover{
+    color: #009688!important;
+    text-decoration: none!important;
+    -webkit-box-shadow: 0 5px 21px -8px rgba(0,0,0,0.75);
+    -moz-box-shadow: 0 5px 21px -8px rgba(0,0,0,0.75);
+    box-shadow: 0 5px 21px -8px rgba(0,0,0,0.75);
+}
+
+.message{
+    position: absolute;
+    bottom: 10px;
+    margin: 0 auto;
+    width: inherit;
 }
