--- a/MailService/Pages/Emails/ConfirmAccountEmail.cshtml
+++ b/MailService/Pages/Emails/ConfirmAccountEmail.cshtml
@@ -1,4 +1,4 @@
-﻿@model MailService.ViewModels.ConfirmAccountEmailViewModel
+﻿@model MailService.ViewModels.CallbackEmailViewModel
 
 <h2>Welocme to Kickstarter!</h2>
 <br>
@@ -9,9 +9,3 @@
 <div class="pt-3 mb-3 text-center">
     <a href="@Model.CallbackUrl" class="btn btn-primary" id="link">Confirm Account</a>
 </div>
-<br>
-
-<p class="t-16">If you have any questions, just reply to this email - we're always happy to help out.</p>
-
-<hr class="mt-4 mb-4">
-<p class="text-muted">The Kickstarter Team</p>
