--- a/MailService/Pages/Shared/_Layout.cshtml
+++ b/MailService/Pages/Shared/_Layout.cshtml
@@ -141,6 +141,12 @@
 <div class="container border shadow p">
     <main role="main" class="pb-3">
         @RenderBody()
+        
+        <br/>
+        <p class="t-16">If you have any questions, just reply to this email - we're always happy to help out.</p>
+        
+        <hr class="mt-4 mb-4">
+        <p class="text-muted">The Kickstarter Team</p>
     </main>
 </div>
 
